# fcitx-gclient

./: CMakeLists.txt  FcitxGClientConfig.cmake.in  README.md  config.h.in
cmake/: FindGObjectIntrospection.cmake  FindGTK2.cmake  FindGTK3.cmake  GObjectIntrospectionMacros.cmake
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/gtk2/: CMakeLists.txt  fcitxim.c  fcitximcontext.c  fcitximcontext.h
src/client/gtk3/: CMakeLists.txt
src/fcitx-gclient/: CMakeLists.txt  FcitxGClientConfig.cmake.in  common.h  fcitx-gclient.pc.in  fcitxclient.c  fcitxclient.h  fcitxconnection.c  fcitxconnection.h  fcitxinputmethod.c  fcitxinputmethod.h  fcitxkbd.c  fcitxkbd.h
src/fcitx-gclient/test/: testgclient.c
